[gd_scene load_steps=37 format=3 uid="uid://gef1vveefbjs"]

[ext_resource type="Script" uid="uid://d4fky1rju1p7y" path="res://scripts/gameui.gd" id="1_wwaar"]
[ext_resource type="Texture2D" uid="uid://byivli2q5tqnr" path="res://assets/sprites/ui_elements.png" id="2_ccwni"]
[ext_resource type="FontFile" uid="uid://8t1kpmmy5wvw" path="res://assets/fonts/pixelsix00.ttf" id="2_mu2ln"]
[ext_resource type="Texture2D" uid="uid://dq278psfgufaf" path="res://assets/sprites/coin.png" id="4_mu2ln"]

[sub_resource type="LabelSettings" id="LabelSettings_ccwni"]
font = ExtResource("2_mu2ln")
font_size = 34

[sub_resource type="AtlasTexture" id="AtlasTexture_wwaar"]
atlas = ExtResource("2_ccwni")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu2ln"]
atlas = ExtResource("2_ccwni")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n31af"]
atlas = ExtResource("2_ccwni")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wexye"]
atlas = ExtResource("2_ccwni")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgq32"]
atlas = ExtResource("2_ccwni")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0xlj"]
atlas = ExtResource("2_ccwni")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjfv8"]
atlas = ExtResource("2_ccwni")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3guck"]
atlas = ExtResource("2_ccwni")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwled"]
atlas = ExtResource("2_ccwni")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_55g5v"]
atlas = ExtResource("2_ccwni")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0edb"]
atlas = ExtResource("2_ccwni")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6hs0"]
atlas = ExtResource("2_ccwni")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_seba6"]
atlas = ExtResource("2_ccwni")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68h5l"]
atlas = ExtResource("2_ccwni")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk3oy"]
atlas = ExtResource("2_ccwni")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwklp"]
atlas = ExtResource("2_ccwni")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dilhr"]
atlas = ExtResource("2_ccwni")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjngh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwaar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu2ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n31af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wexye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgq32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0xlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjfv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3guck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwled")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55g5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0edb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6hs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seba6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68h5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk3oy")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_jwklp")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_dilhr")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_jwklp")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_dilhr")
}],
"loop": false,
"name": &"break",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rjngh"]
atlas = ExtResource("4_mu2ln")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_71aa1"]
atlas = ExtResource("4_mu2ln")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4xok"]
atlas = ExtResource("4_mu2ln")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3wg8"]
atlas = ExtResource("4_mu2ln")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuh8j"]
atlas = ExtResource("4_mu2ln")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvw3u"]
atlas = ExtResource("4_mu2ln")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5s8r"]
atlas = ExtResource("4_mu2ln")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkjs2"]
atlas = ExtResource("4_mu2ln")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7apy"]
atlas = ExtResource("4_mu2ln")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l442k"]
atlas = ExtResource("4_mu2ln")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_380xy"]
atlas = ExtResource("4_mu2ln")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oef0"]
atlas = ExtResource("4_mu2ln")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0jyfi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjngh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71aa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4xok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3wg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuh8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvw3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5s8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkjs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7apy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l442k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_380xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oef0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjngh")
}],
"loop": false,
"name": &"pickup",
"speed": 20.0
}]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwaar")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartsLabel" type="Label" parent="CanvasLayer"]
offset_left = 70.0
offset_right = 110.0
offset_bottom = 56.0
scale = Vector2(1.53448, 1.53448)
text = "3"
label_settings = SubResource("LabelSettings_ccwni")

[node name="CoinsLabel" type="Label" parent="CanvasLayer"]
offset_left = 70.0
offset_top = 57.0
offset_right = 110.0
offset_bottom = 113.0
scale = Vector2(1.53448, 1.53448)
text = "0"
label_settings = SubResource("LabelSettings_ccwni")

[node name="HeartsSprite" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(30, 21)
scale = Vector2(4.60343, 4.60343)
sprite_frames = SubResource("SpriteFrames_rjngh")
animation = &"break"
frame = 18
frame_progress = 1.0

[node name="CoinsSprite" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(30, 86)
scale = Vector2(4.23325, 4.23325)
sprite_frames = SubResource("SpriteFrames_0jyfi")
animation = &"pickup"
frame = 12
frame_progress = 1.0
